[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/0x72_16x16DungeonTileset.v4.png" type="Texture" id=1]
[ext_resource path="res://Characters/Character.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 48 )

[sub_resource type="Animation" id=5]

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -16 ), Vector2( 0, 0 ) ]
}

[node name="Character" type="Node2D"]
position = Vector2( 0, -1.15762 )
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 176, 224, 16, 16 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -32 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/idle = SubResource( 5 )
anims/victory = SubResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -72.0
margin_top = -80.0
margin_right = 88.0
margin_bottom = -16.0
text = "I'm a knight! If you give me your armour I can escape!"
align = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiveButton" type="Label" parent="."]
visible = false
margin_left = -72.0
margin_top = -128.0
margin_right = 80.0
margin_bottom = -96.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press E to Knight give Armour"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TakeButton" type="Label" parent="."]
visible = false
margin_left = -72.0
margin_top = -128.0
margin_right = 80.0
margin_bottom = -96.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press E to take back your item"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThankYouLabel" type="Label" parent="."]
visible = false
margin_left = -72.0
margin_top = -64.0
margin_right = 80.0
margin_bottom = -32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "I'm saved! Thank you!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WontSaveUsLabel" type="Label" parent="."]
visible = false
margin_left = -72.0
margin_top = -94.8424
margin_right = 80.0
margin_bottom = -29.8424
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "You have so much gear, but you won't spare anything to help us? You coward."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
